# tao

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  DEPENDENTS.md  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: Rust.yml
Source/: error.rs  event.rs  event_loop.rs  icon.rs  keyboard.rs  lib.rs  monitor.rs  window.rs
Source/platform/: android.rs  ios.rs  macos.rs  mod.rs  run_return.rs  unix.rs  windows.rs
Source/platform_impl/: mod.rs
Source/platform_impl/android/: mod.rs  ndk_glue.rs
Source/platform_impl/ios/: app_state.rs  badge.rs  event_loop.rs  ffi.rs  keycode.rs  mod.rs  monitor.rs  view.rs  window.rs
Source/platform_impl/linux/: device.rs  event_loop.rs  icon.rs  keyboard.rs  keycode.rs  mod.rs  monitor.rs  taskbar.rs  util.rs  window.rs
Source/platform_impl/linux/wayland/: header.rs
Source/platform_impl/linux/x11/: ffi.rs  xdisplay.rs
Source/platform_impl/macos/: app.rs  app_delegate.rs  app_state.rs  badge.rs  event.rs  event_loop.rs  ffi.rs  icon.rs  keycode.rs  mod.rs  monitor.rs  observer.rs  progress_bar.rs  view.rs  window.rs  window_delegate.rs
Source/platform_impl/macos/util/: async.rs  cursor.rs  mod.rs
Source/platform_impl/windows/: dark_mode.rs  dpi.rs  drop_handler.rs  event.rs  event_loop.rs  icon.rs  keyboard.rs  keyboard_layout.rs  keycode.rs  minimal_ime.rs  mod.rs  monitor.rs  raw_input.rs  util.rs  window.rs  window_state.rs
Source/platform_impl/windows/event_loop/: runner.rs
examples/: README.md  control_flow.rs  cursor.rs  cursor_grab.rs  custom_events.rs  decorations.rs  drag_window.rs  fullscreen.rs  handling_close.rs  min_max_size.rs  minimize.rs  monitor_list.rs  mouse_wheel.rs  multithreaded.rs  multiwindow.rs  overlay.rs  parentwindow.rs  progress_bar.rs  reopen_event.rs  request_redraw.rs  request_redraw_threaded.rs  resizable.rs  set_ime_position.rs  theme.rs  timer.rs  transparent.rs  video_modes.rs  window.rs  window_debug.rs  window_icon.rs  window_run_return.rs
src/: error.rs  icon.rs  lib.rs  monitor.rs
tao-macros/: CHANGELOG.md  Cargo.toml
tao-macros/Source/: lib.rs
tao-macros/examples/: android_fn.rs  generate_package_name.rs
