[dependencies]
bitflags = { version = "2" }
crossbeam-channel = "0.5"
dpi = { version = "0.1" }
lazy_static = { version = "1" }
libc = { version = "0.2" }
log = { version = "0.4" }
rwh_04 = { package = "raw-window-handle", version = "0.4", optional = true }
rwh_05 = { package = "raw-window-handle", version = "0.5", features = [
	"std",
], optional = true }
rwh_06 = { package = "raw-window-handle", version = "0.6", features = [
	"std",
], optional = true }
serde = { version = "1", optional = true, features = ["serde_derive"] }
url = { version = "2" }

[dev-dependencies]
env_logger = { version = "0.11" }
image = { version = "0.25" }

[features]
default = ["rwh_06"]
rwh_04 = ["dep:rwh_04"]
rwh_05 = ["dep:rwh_05"]
rwh_06 = ["dep:rwh_06"]
serde = ["dep:serde", "dpi/serde"]

[package]
authors = [
	"Tauri Programme within The Commons Conservancy",
	"The winit contributors",
]
categories = ["gui"]
description = "Cross-platform window manager library."
documentation = "https://docs.rs/tao"
edition = "2021"
keywords = ["windowing"]
license-file = "LICENSE"
name = "tao"
readme = "README.md"
repository = "https://github.com/tauri-apps/tao"
rust-version = "1.70"
version = "0.31.1"

[package.metadata]

[package.metadata.docs]

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
features = ["rwh_04", "rwh_05", "rwh_06", "serde"]
targets = [
	"i686-pc-windows-msvc",
	"x86_64-pc-windows-msvc",
	"i686-unknown-linux-gnu",
	"x86_64-unknown-linux-gnu",
	"x86_64-apple-darwin",
]

[target]

[target.'cfg(any(target_os = "android", target_os = "windows"))']

[target.'cfg(any(target_os = "android", target_os = "windows"))'.dependencies]
once_cell = { version = "1" }

[target.'cfg(any(target_os = "ios", target_os = "macos"))']

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
objc = { version = "0.2" }

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))']

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
dlopen2 = { version = "0.7.0" }
gdkwayland-sys = "0.18.0"
gdkx11-sys = "0.18"
gtk = { version = "0.18" }
parking_lot = { version = "0.12" }
x11-dl = "2.21"

[target.'cfg(target_os = "android")']

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21" }
ndk = { version = "0.9" }
ndk-context = "0.1"
ndk-sys = "0.6"
tao-macros = { version = "0.1.0", path = "./tao-macros" }

[target.'cfg(target_os = "macos")']

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = { version = "0.26" }
core-foundation = "0.10"
core-graphics = "0.24"
dispatch = { version = "0.2" }
scopeguard = { version = "1.2" }

[target.'cfg(target_os = "windows")']

[target.'cfg(target_os = "windows")'.dependencies]
parking_lot = { version = "0.12" }
unicode-segmentation = "1.11"
windows-core = "0.59"
windows-version = "0.1"

[target.'cfg(target_os = "windows")'.dependencies.windows]
features = [
  "Win32_Devices_HumanInterfaceDevice",
  "Win32_Foundation",
  "Win32_Globalization",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_DataExchange",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Ole",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
  "Win32_System_SystemInformation",
  "Win32_UI_Accessibility",
  "Win32_UI_Controls",
  "Win32_UI_HiDpi",
  "Win32_UI_Input_Ime",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Input_Pointer",
  "Win32_UI_Input_Touch",
  "Win32_UI_Shell",
  "Win32_UI_TextServices",
  "Win32_UI_WindowsAndMessaging"
]
version = "0.59"

[target.'cfg(target_os = "windows")'.dev-dependencies]
softbuffer = { version = "0.4" }

[workspace]
members = ["tao-macros"]
