[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = [ "full" ] }

[features]
default = [ ]

[lib]
path = "Source/lib.rs"
proc-macro = true

[package]
authors = [ "Tauri Programme within The Commons Conservancy" ]
description = "Proc macros for tao"
documentation = "https://docs.rs/tao-macros"
edition = "2021"
license-file = "LICENSE"
name = "tao-macros"
readme = "../README.md"
repository = "https://github.com/tauri-apps/tao"
rust-version = "1.56"
version = "0.1.3"
