[package]
name = "tao-macros"
description = "Proc macros for tao"
version = "0.1.3"
edition = "2021"
authors = [ "Tauri Programme within The Commons Conservancy" ]
rust-version = "1.74"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/tauri-apps/tao"
documentation = "https://docs.rs/tao-macros"

[lib]
proc-macro = true

[features]
default = [ ]

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = [ "full" ] }

[features]
default = [ ]

[lib]
path = "Source/lib.rs"
proc-macro = true

[package]
authors = [ "Tauri Programme within The Commons Conservancy" ]
description = "Proc macros for tao"
documentation = "https://docs.rs/tao-macros"
edition = "2024"
license-file = "LICENSE"
name = "tao-macros"
readme = "../README.md"
repository = "https://github.com/tauri-apps/tao"
rust-version = "1.85.0"
version = "0.1.3"
